[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
skip-string-normalization = true

[tool.ruff.format]
quote-style = "single"

[[tool.mypy.overrides]]
module = "shapely.*"
ignore_missing_imports = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
lint.select = ["E", "F", "TID", "I", "B", "PGH", "UP", "A", "C4", "PIE", "T20", "RSE", "RET", "SIM", "ARG", "PTH", "ERA", "PL", "RUF"]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]
"osmexp/__main__.py" = ["PLR2004", "T201"]
