[metadata]
name = osmexp
version = 0.1.0
description = OpenStreetMap GeoJSON Exporter
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Ronaldo Ferreira
author_email = ronaldo@racum.com
license = BSD-3-Clause
url = https://github.com/racum/osmexp
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    Source = https://github.com/racum/osmexp

[options]
packages = osmexp
python_requires = >=3.11
install_requires =
    requests
    shapely

[options.entry_points]
console_scripts =
    osmexp = osmexp.__main__:main
